<resources>
    <string name="app_name">Kemah</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email_hint">user@kemah.com</string>
    <string name="pass_hint">Your secret password</string>
    <string name="username">Username</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="campground_name">Campground Name</string>
    <string name="campground_location">Campground Location</string>
    <string name="campground_address">Campground Address</string>
    <string name="campground_price">Campground Price</string>
    <string name="campground_image_url">Campground Image URL</string>
    <string name="campground_image_description">Campground Illustration</string>
    <string name="campground_description">Campground Description</string>
    <string name="campground_description_lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mauris pellentesque pulvinar pellentesque habitant morbi. Sed viverra tellus in hac habitasse platea dictumst vestibulum rhoncus. Platea dictumst vestibulum rhoncus est pellentesque elit. Justo nec ultrices dui sapien eget mi. Ac tortor vitae purus faucibus ornare. Eleifend donec pretium vulputate sapien. Tincidunt nunc pulvinar sapien et ligula ullamcorper malesuada. Purus viverra accumsan in nisl nisi. In nibh mauris cursus mattis molestie a. Nibh venenatis cras sed felis.\nArcu odio ut sem nulla pharetra diam sit. Fermentum odio eu feugiat pretium nibh. Nibh nisl condimentum id venenatis a condimentum. Ullamcorper dignissim cras tincidunt lobortis feugiat vivamus. Massa tempor nec feugiat nisl pretium fusce. Sit amet volutpat consequat mauris nunc congue. Pellentesque elit eget gravida cum. Ultrices gravida dictum fusce ut. Bibendum arcu vitae elementum curabitur vitae. Pellentesque massa placerat duis ultricies lacus sed. Quam vulputate dignissim suspendisse in est ante in nibh. Vel fringilla est ullamcorper eget nulla facilisi etiam dignissim. Morbi tristique senectus et netus et malesuada fames ac. In eu mi bibendum neque egestas. Congue eu consequat ac felis donec et odio. Eget aliquet nibh praesent tristique magna sit amet. Imperdiet sed euismod nisi porta lorem mollis aliquam ut. Maecenas ultricies mi eget mauris pharetra et. Nulla porttitor massa id neque aliquam vestibulum morbi blandit.</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="label_campground_entry">Campground Entry</string>
    <string name="label_campground_list">Campground List</string>
    <string name="review">Review</string>
    <string name="display_list">Display List</string>
    <string name="display_grid">Display Grid</string>
    <string name="author">Author</string>
    <string name="comment">Comment</string>
    <string name="send">Send</string>
    <string name="write_a_review">Write a review</string>
    <string name="no_comment">No Comment Found!</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="get_current_location">Get Current Location</string>
</resources>