<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".CampgroundDetailActivity">

    <ImageView
        android:id="@+id/image_campground"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:contentDescription="@string/campground_image_description"
        app:srcCompat="@drawable/camping" />

    <TextView
        android:id="@+id/text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/campground_name"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/text_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/campground_location"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/campground_price"
        android:textSize="16sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/text_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/campground_address" />

    <Button
        android:id="@+id/button_review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/review" />
</LinearLayout>