<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_campground_grid"
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:contentDescription="@string/campground_description"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/camping" />

        <TextView
            android:id="@+id/text_campground_grid_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="4dp"
            android:text="@string/campground_name"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_campground_grid_location_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingTop="4dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp"
            android:text="@string/campground_location" />
    </LinearLayout>
</androidx.cardview.widget.CardView>