<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_campground_ilustration"
            android:layout_width="86dp"
            android:layout_height="64dp"
            android:layout_weight="0"
            android:contentDescription="@string/campground_image_description"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/camping" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_weight="0"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_campground_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/campground_name"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_campground_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/campground_price"
                android:textStyle="italic" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>